[package]
name = "constfft"
version = "0.2.2"
authors = ["Walter Smuts <smuts.walter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library crate providing an FFT API for arrays"
documentation = "https://docs.rs/constfft/"
repository = "https://github.com/WalterSmuts/constfft"
keywords = ["fft", "dft", "discrete", "fourier", "const-generics"]
categories = ["algorithms", "compression", "multimedia::encoding", "science", "mathematics"]
readme = "README.md"

# See: https://users.rust-lang.org/t/doctests-that-require-a-non-default-feature-is-it-possible/29529/7
[package.metadata."docs.rs"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
array-init = "2.0.1"
realfft = { version = "3.0.1", optional = true }
rustfft = "6.0.1"
typemap = "0.3.3"

[dev-dependencies]
approx = "0.5.1"
