[package]
name = "easyfft"
version = "0.4.0"
authors = ["Walter Smuts <smuts.walter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library crate providing an easy FFT API for arrays and slices"
documentation = "https://docs.rs/easyfft/"
repository = "https://github.com/WalterSmuts/easyfft"
keywords = ["fft", "dft", "discrete", "fourier", "const-generics"]
categories = ["algorithms", "compression", "multimedia::encoding", "science", "mathematics"]
readme = "README.md"

# See: https://users.rust-lang.org/t/doctests-that-require-a-non-default-feature-is-it-possible/29529/7
[package.metadata."docs.rs"]
all-features = true

[features]
const-realfft = []
fallible = []
default = ["fallible"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
generic_singleton = "0.4.1"
num-complex = { version = "0.4.5", features = ["serde"] }
realfft = { version = "3.0.1"}
rustfft = "6.0.1"
serde = { version = "1.0.193", features = ["derive"] , optional = true}

[dev-dependencies]
approx = "0.5.1"
